# idf-doorlocker

./: CMakeLists.txt  partitions.csv
components/RCSwitch/: CMakeLists.txt  RCSwitch.cpp
components/RCSwitch/include/: RCSwitch.hpp
components/dns_server/: dns_server.c
components/dns_server/include/: dns_server.h
data/: agenda.html  atualizar.html  automacao.html  central.html  index.html
data/config/: config  credential
data/css/: igra.css
data/device/: 1  2  3  z5z5z5z5z5z5
data/ha/: apiget.json  description.xml  light_detail.json  lights_all.json
data/img/: logomarca
data/js/: icons.js  messages.js
data/sensor/: 4  x5x5x5x5x5x5
main/: CMakeLists.txt  ble_manager.cpp  ble_manager.hpp  device_manager.cpp  device_manager.hpp  event_bus.cpp  event_bus.hpp  idf_component.yml  main.c  main.cpp  matter_manager.cpp  matter_manager.hpp  mqtt_manager.cpp  mqtt_manager.hpp  net_manager.cpp  net_manager.hpp  socket_manager.cpp  socket_manager.hpp  storage.cpp  storage.hpp  storage_manager.cpp  storage_manager.hpp  sync_manager.cpp  sync_manager.hpp  udp_manager.cpp  udp_manager.hpp  web_manager.cpp  web_manager.hpp
